<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:srcCompat="@drawable/mundo" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textEmailLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textEmailRegistro" />
    <EditText
        android:id="@+id/editEmailLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textPasswordLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textPasswordRegistro" />

    <EditText
        android:id="@+id/editPassLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin" />
    <Button
        android:id="@+id/btnLoginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLoginRegister" />
</LinearLayout>